# vertice-code

./: .coverage.juan-Linux-Mint-Vertice.100206.XatiVRdx  .dockerignore  .env.example  .env.gemini-primary  .firebaserc  .gcloudignore  .gitignore  .pre-commit-config.yaml  .qwen_history  .secrets.baseline  AGENTS.md  AGENTS_2028_EVOLUTION.md  AUDIT_PHASE_1_ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_DAY2.md  AUDIT_REPORT_DAY4.md  AUDIT_REPORT_DAY5_SANDBOX.md  BASH_INTEGRATION_COMPLETE.md  BORIS_CHERNY_IMPLEMENTATION_REPORT.md  BORIS_CHERNY_SESSION_REPORT.md  BRUTAL_AIRGAP_REPORT.md  BRUTAL_AUDIT_FIX_PLAN.md  BRUTAL_AUDIT_REPORT.md  BRUTAL_AUDIT_REPORT_V2.md  BRUTAL_FIX_COMPLETE_REPORT.md  BRUTAL_INFRA_REPORT.md  BRUTAL_REALITY_AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTEXTO_SISTEMICO.md  CONTRIBUTING.md  DAILY_LOG.md  DAY1_REAL_COMPLETION_REPORT.md  DAY1_SCIENTIFIC_VALIDATION_REPORT.md  DAY3_COMPREHENSIVE_LLM_VALIDATION_REPORT.md  DAY5_SANDBOX_FINAL_REPORT.md  DEEP_AUDIT_TOOLS_INCONSISTENCIES.md  DEPLOY_CHECKLIST_GCP.md  DEPLOY_FINAL_REPORT.md  DEPLOY_GUIDE.md  (+163 more)
.archive/: ARCHIVE.md
.firebase/: hosting.bGFuZGluZ192Mg.cache  hosting.bGFuZGluZw.cache
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.jules/: setup.sh  workflows.sh
.prometheus/: prometheus.db  prometheus_pro_victory.db
.vertice/: coder_evolution.json  config.yaml
agents/: __init__.py  base.py
ai-chat-frontend/: Dockerfile  index.html
app/: actions.ts
benchmark_results/: nebius.py
benchmarks/: benchmark_llm.py  manual_detailed_profiling.py  manual_model_latency_comparison.py  ui_performance.py
ci-cd/: ai_pipeline.py
cli/: cli_app.py  cli_mcp.py  maestro.py  maestro_governance.py  main.py  shell_main.py
core/: __init__.py  agency.py
database/: schema.sql
docs/: AGENTS_EVOLUTION_PLAN_2028.md  AGENT_ANALYSIS_2026.md  AGENT_CONSOLIDATION_REPORT.md  AGENT_SIMPLIFICATION_PLAN.md  AGENT_STATUS_REPORT.md  AI_TRANSPARENCY_CARD.md  API.md  APP_REVENUE_IDEAS_2026.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BRUTAL_COMPETITIVE_ANALYSIS.md  BRUTAL_HONEST_AUDIT_REAL.md  BRUTAL_TRUTH_DIAGNOSTIC.md  BUILD_TROUBLESHOOTING_LOG.md  CLAUDE_CODE_PARITY_PLAN.md  CLI_RESEARCH_2025.md  CODE_CONSTITUTION.md  CODE_CONSTITUTION_AUDIT_PLAN.md  CODE_REVIEW_RESOLUTION.md  COMPETITOR_ANALYSIS.md  COMPLETE_EVOLUTION_PLAN_2026.md  CONSTITUICAO_VERTICE_v3.0.md  CONSTITUIÇÃO_VÉRTICE_v3.0.md  CONSTITUTIONAL_COMPLIANCE_REPORT_NARCISSUS.md  CYBERPUNK_UI_IMPLEMENTATION_PLAN.md  DAY1_SCIENTIFIC_VALIDATION_REPORT.md  DAY2_SCIENTIFIC_VALIDATION_COMPLETE.md  DAY2_SCIENTIFIC_VALIDATION_REPORT.md  DAY2_VALIDATION_REPORT.md  DAY3_COMPREHENSIVE_LLM_VALIDATION_REPORT.md  DAY3_SCIENTIFIC_VALIDATION_REPORT.md  DAY4_COMPLETION_REPORT.md  DAY4_VALIDATION_REPORT.md  DAY7_VALIDATION_REPORT.md  DAY8_PHASE3_RESEARCH_SYNTHESIS.md  DAY8_UI_UX_EXCELLENCE_REPORT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOY_READINESS_2026-01-14.md  DEVELOPMENT.md  DEVSQUAD_TRACKER.md  (+127 more)
e2e_multi/: session_0b349632_20260109_145839.md
e2e_stress/: session_0e83476e_20260109_145839.md  session_36403029_20260109_145839.md  session_416e0d40_20260109_145839.md  session_533a84a1_20260109_145839.md  session_5be53c1d_20260109_145839.md  session_75770e8e_20260109_145839.md  session_b1419809_20260109_145839.md  session_d4f9fce6_20260109_145839.md  session_d545f457_20260109_145839.md  session_dfe55581_20260109_145839.md
examples/: .qwenrc  .qwenrc.hooks  demo_undo_timeline.py  enhanced_shell_demo.py  example.py  example_parser_usage.py  factorial.py  indexer_demo.py  palette_demo.py  polish_demo.py  pytorch_cifar10.py  showcase_all.py  toasts_demo.py  tree_demo.py  tui_demo.py
frontend/: tailwind.config.ts
gradio_ui/: app.py  cli_bridge.py  components.py  cyber_theme.css  streaming_bridge.py
jdev_cli/: __init__.py  cli_app.py  cli_mcp.py  maestro.py  maestro_governance.py  main.py  shell_main.py  ui.py  ui_launcher.py
jdev_core/: __init__.py  language_detector.py  protocols.py  types.py
jdev_governance/: __init__.py
jdev_tui/: __main__.py  app.py
k8s/: ai-latency-optimization.yaml  deployment-vertex-ai-asia.yaml  deployment-vertex-ai-eu.yaml  deployment-vertex-ai-us.yaml  falco-threat-detection.yaml  hpa-vertex-ai-asia.yaml  hpa-vertex-ai-eu.yaml  hpa-vertex-ai-us.yaml  istio-security-config.yaml  jaeger-deployment.yaml  namespace.yaml  network-policies.yaml  otel-collector-config.yaml  otel-collector-deployment.yaml  prometheus-deployment.yaml  spin-app.yaml  spin-configmap.yaml  spin-service.yaml
landing/: ASSETS_PROMPTS.md  DEPLOY_SUMMARY.md  README.md  diagrama-arquitetura.md  index-v2.html  index.html  mcp.html  script-v2.js  script.js  styles-v2.css  styles.css
landing_v2/: cli.html  index-v2.html  script-v2.js  styles-v2.css
mcp-landing/: .firebaserc  firebase.json  mcp-script.js  mcp-styles.css
memory/: __init__.py
prometheus/: agent.py
proto/: Makefile  agent_card.proto  common.proto  fix_imports.sh  message.proto  service.proto  task.proto
providers/: __init__.py  anthropic_vertex.py  azure_openai.py  base.py  cerebras.py  gemini.py  groq.py  maximus_provider.py  mistral.py  nebius.py  openrouter.py  prometheus_provider.py  resilience.py  vertex_ai.py  vertice_router.py
qwen_cli/: __main__.py  app.py
qwen_dev_cli/: __main__.py  cli.py  maestro.py  maestro_shell.py  main.py  permissions.py  security_hardening.py  shell.py  shell_enhanced.py  shell_main.py  shell_simple.py  ui.py
scripts/: audit_airgaps_swarm.py  audit_cli_e2e.py  audit_live_system.py  audit_tui_e2e.py  audit_tui_imports.py  audit_webapp_e2e.py  benchmark_mirix.py  check_file_size.py  check_nesting.py  debug_vertex_isolation.py  gather_system_context.py  gcp_deploy_preflight.py  legacy_maestro  maestro_v10_integrated.py  main.py  pre_release_validation.py  prometheus_entry.py  run_mega_test.py  test_bedrock.py  trace_agency_flow.py  verify_deploy.py
src/: app.py  broken_example.py  vertice_agents  vertice_core
terraform/: ai-latency-optimization.tf  vertex-ai-optimization.tf
test-app/: index.js  package.json
test-frontend/: Dockerfile  index.html
tests/: conftest.py  (+141 more)
(+3226 files in other folders)
