[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juan-dev-code"
version = "1.0.0"
description = "AI-Powered Code Assistant with MCP Integration - Privacy-First, Mobile-Friendly, Lightning Fast"
readme = "README.md"
authors = [
    {name = "Juan Carlos de Souza", email = "juancs.dev@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "code-assistant", "mcp", "gradio", "cli", "juancs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "gradio>=5.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.20.0",
    "mcp>=1.0.0",
    "pyfiglet>=1.0.0",
    "pyperclip>=1.8.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
fast = [
    "uvloop>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/JuanCS-Dev/juan-dev-code"
Repository = "https://github.com/JuanCS-Dev/juan-dev-code"
Issues = "https://github.com/JuanCS-Dev/juan-dev-code/issues"

[project.scripts]
# Main unified entry point
juancs = "jdev_cli.main:cli_main"
jcs = "jdev_cli.main:cli_main"

# TUI (Textual-based)
juancs-tui = "jdev_tui.app:main"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["jdev_cli*", "jdev_tui*", "jdev_core*", "jdev_governance*", "gradio_ui*"]
namespaces = false
