[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vertice-code"
version = "1.0.0"
description = "Vertice-Code: Enterprise Multi-LLM Orchestration - Intelligent Routing, Free Tier Priority, Constitutional AI"
readme = "README.md"
authors = [
    {name = "Juan Carlos de Souza", email = "juancs.dev@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "code-assistant", "mcp", "llm", "multi-model", "vertice", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "pyfiglet>=1.0.0",
    "pyperclip>=1.8.0",
    "textual>=0.47.0",
    # Multi-LLM Providers
    "google-cloud-aiplatform>=1.38.0",
    "groq>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
fast = [
    "uvloop>=0.18.0",
]
# Additional LLM providers (optional)
providers = [
    "mistralai>=0.1.0",
    "cohere>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/JuanCS-Dev/juan-dev-code"
Repository = "https://github.com/JuanCS-Dev/juan-dev-code"
Issues = "https://github.com/JuanCS-Dev/juan-dev-code/issues"

[project.scripts]
# TUI (default - main interface)
vertice = "vertice_tui.app:main"

# CLI entry points (alternative)
vtc = "vertice_cli.main:cli_main"
vertice-cli = "vertice_cli.main:cli_main"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["vertice_cli*", "vertice_tui*", "vertice_core*", "vertice_governance*", "prometheus*"]
namespaces = false
